<resources>
    <string name="app_name">Budgetti</string>
    <string name="logo">logo</string>
    <string name="new_btn">New</string>
    <string name="reset">Reset</string>
    <string name="textview">TextView</string>
    <string name="name">Name:</string>
    <string name="ae_name">Name</string>
    <string name="ae_amount">Amount:</string>
    <string name="ae_add">Add</string>
    <string name="_0_00">0.00</string>
    <string name="cancel">Cancel</string>
    <string name="old_budget">Old Budget</string>
    <string name="new_budget">New Budget</string>
    <string name="warning">Changing the Budget will reset all expenses!</string>
    <string name="change">Change</string>
    <string name="accept">Accept</string>
    <string name="danger_danger">Danger Danger</string>
</resources>
