<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_margin="50sp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Expense"
        android:background="#d3e057"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/ae_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"

        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ae_amount"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amount_edit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/_0_00" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#ffffa6"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="2">

        <Button
            android:id="@+id/abort_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff8a65"
            android:text="@string/cancel"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#a8b545"
            android:text="@string/ae_add"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>