<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E2E1"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/statusbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/budgetti_logo" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout

        android:layout_width="match_parent"
        android:id="@+id/button_layout"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="end"
        android:layout_alignParentBottom="true">



        <Button
            android:id="@+id/reset_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff8a65"
            android:text="@string/reset"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <Button
            android:id="@+id/new_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#a8b545"
            android:text="@string/new_btn"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/remains_layiout"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_above="@id/button_layout">

        <TextView
            android:id="@+id/remains_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dce775"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="32sp"
            android:textStyle="bold"
            android:padding="10dp"/>
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/remains_layiout"
        android:layout_below="@+id/my_toolbar">

        <include layout="@layout/content_main"
            android:id="@+id/content"
            />

    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>
